# Annotations

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci-mypy.yml
Basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
