[tool.poetry]
name = "Annotations"
version = "0.1.0"
description = "Homework #2 Otus Python Developer. Professional"
authors = ["Artem Balabashin <balabashinan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"

[tool.isort]
profile = "black"
line_length = 88